# apex-stack

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: domain-repos-agent.md  feature-impl-agent.md  graphql-impl-agent.md
.sqlx/: query-32f546314c252d868c894ab9ab9d32de0ae683f62b015f9371787b4b37318b9a.json  query-3ba87eb78bba7c51bcace152c45d706ee61278f1cd9694066be0ae2d51707b8d.json  query-3ded2bd667f06837157c76a85aa6807859fe500cd106b11b20fc01aafa04738d.json  query-6a307bcde203f633fd0491326c2c7d8df0bc838a4f4ec88d45b9615848301722.json  query-74681fd1bc9914daebb2ee624c6190fb72647263e8a1ca4753a82408ff9f8e49.json  query-7d5ec688f0e5fa0214367cff1bb52aabffd8fc9e8425e7d1f847dae5598c773b.json  query-82618f9e67d59fb3daaa8b596baacfa747b2d7d025e2602305621d0d228f76e2.json  query-82764ddea0e00c99b4f88a1dac5b5fb4ab616dd827a02cd73964bd4c1a4cefb3.json  query-c6bc3e46079a07f7ca79926f51a75a4ffe5e00be4ca0d497b785c92a0812805c.json  query-c7cde99d88b3343d9f0afc36483b7b14074c211866f06b9791af5afb214d96f5.json  query-dd80df24a8a7af6514ed5a8d8b791688ff9d97933db62bc6b147807857d595f0.json
ai_docs/: seaquery.md
crates/apps/graphql-api/: Cargo.toml
crates/apps/graphql-api/src/: lib.rs  main.rs
crates/apps/graphql-api/src/schema/: mod.rs  mutation.rs  query.rs  types.rs
crates/apps/graphql-api/tests/: contracts.rs  graphql_api.rs  smoke.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  todo.rs  user.rs
crates/domain/tests/: todo_repository.rs  user_repository.rs
crates/features/todo-feature/: Cargo.toml
crates/features/todo-feature/src/: error.rs  lib.rs  service.rs
crates/features/todo-feature/tests/: todo_service.rs  todo_workflows.rs
crates/features/user-feature/: Cargo.toml
crates/features/user-feature/src/: error.rs  jobs.rs  lib.rs  service.rs
crates/features/user-feature/tests/: user_journeys.rs  user_service.rs
migrations/: 20231201000003_create_jobs.sql  20251204000001_create_users.sql  20251204000002_create_todos.sql
scripts/: setup_cloud_db.sh
