[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/features/user-feature",
    "crates/features/todo-feature",
    "crates/apps/graphql-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time", "json"] }

# Job queue
sqlxmq = "0.6"

# Web framework
axum = "0.8"

# GraphQL
async-graphql = { version = "7", features = ["uuid", "time"] }
async-graphql-axum = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "2"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Workspace crates
domain = { path = "crates/domain" }
user-feature = { path = "crates/features/user-feature" }
todo-feature = { path = "crates/features/todo-feature" }
