[package]
name = "domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
