[package]
name = "graphql-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
user-feature.workspace = true
todo-feature.workspace = true
sqlx.workspace = true
sqlxmq.workspace = true
tokio.workspace = true
axum.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
