[package]
name = "user-feature"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
sqlxmq.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
