[package]
name = "user-feature"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
sqlx.workspace = true
sqlxmq.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
